accc_pe_th/main/default/objects/accc_Apex_Code_Configuration__mdt/fields/CacheStrategyInvocation__c.field-meta.xml
<CustomField>
    <fullName>CacheStrategyInvocation__c</fullName>
    <defaultValue>&apos;accc_TestInvokerApexCacheStrategy&apos;</defaultValue>
    <description>Class use to determine the cache strategy</description>
    <inlineHelpText>Class use to determine the cache strategy</inlineHelpText>
    <label>Cache Strategy Invocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>