accc_pe_th/main/default/objects/accc_Apex_Code_Configuration__mdt/fields/ExceptionHandler__c.field-meta.xml
<CustomField>
    <fullName>ExceptionHandler__c</fullName>
    <defaultValue>&apos;accc_ApexExceptionHandler&apos;</defaultValue>
    <description>class that implements IApexExceptionHandler</description>
    <inlineHelpText>class that implements IApexExceptionHandler</inlineHelpText>
    <label>Exception Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>