accc_pe_th/main/default/objects/accc_Apex_Code_Configuration__mdt/fields/FallbackResource__c.field-meta.xml
<CustomField>
    <fullName>FallbackResource__c</fullName>
    <defaultValue>&apos;accc_ApexTestJSONDataFallback&apos;</defaultValue>
    <description>class that implements IFallbackResources</description>
    <label>Fallback Resources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>